_sass/_global.scss
.text-center {
    text-align: center !important;
}

small{
    font-size: 80%;
    font-weight: 400;
}

.section-heading{
    @extend .font-14;
    margin-bottom: 1rem;
    font-weight: bold;
    text-transform: uppercase;
    letter-spacing: 0.25rem;
}

.about-sec-h{
    @extend .section-heading;
    letter-spacing: 2px;
    font-weight: 500;
    margin: 3rem 0 1rem;
    display: grid;
    grid-template-columns: auto minmax(20px, 1fr);
    gap: 0.75rem;
    align-items: center;

    &::after{
        content: '';
        border-top: 1px dashed;
        @include themed(border-color, $dark-300, $dark-700);
    }
}

.neutral-light{
    @include themed(color, $dark-300, $dark-700);
}

